/*
* Copyright 2024, TeamDev. All rights reserved.
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* https://www.apache.org/licenses/LICENSE-2.0
*
* Redistribution and use in source and/or binary forms, with or without
* modification, must retain the above copyright notice and the following
* disclaimer.
*
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
* "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
* LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
* A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
* OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
* SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
* LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
* DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
* THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
* (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
* OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

syntax = "proto3";

package given.comparable;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.core.jvm.comparable.given";
option java_multiple_files = true;

import "given/comparable/invalid.proto";

// This file declares messages that contradict the `compare_by` contract.
// Message names describe in which way a message is incompatible with the option.

message NestedMessage {
    bytes data = 1;
    NoCompareByOption id = 2;
    repeated string gender = 3;
    map<string, int32> results = 4;
    oneof drink {
        string milk = 5;
        string juice = 6;
        string water = 7;
    }
}

message NestedNonComparableProhibited {
    option (compare_by) = {
        field: "nested.id"
    };
    NestedMessage nested = 1;
}

message NestedBytesProhibited {
    option (compare_by) = {
        field: "nested.data"
    };
    NestedMessage nested = 1;
}

message NestedRepeatedProhibited {
    option (compare_by) = {
        field: "nested.gender"
    };
    NestedMessage nested = 1;
}

message NestedMapsProhibited {
    option (compare_by) = {
        field: "nested.results"
    };
    NestedMessage nested = 1;
}

message NestedNonExistingProhibited {
    option (compare_by) = {
        field: "nested.non_existing_field"
    };
    NestedMessage nested = 1;
}

message NestedOneOfProhibited {
    option (compare_by) = {
        field: "nested.drink"
    };
    NestedMessage nested = 1;
}
